Add loan management page with data fetching

--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -159,6 +159,7 @@
             <a href="{{ url_for('enter_customer_data') }}" class="action-button">กรอกข้อมูลลูกค้าใหม่</a>
             <a href="{{ url_for('search_customer_data') }}" class="action-button">ค้นหาข้อมูลลูกค้า</a>
             <a href="{{ url_for('logout') }}" class="action-button logout">ออกจากระบบ</a>
+            <a href="{{ url_for('loan_management') }}" class="menu-button">จัดการเงินกู้</a>
         </div>
     </div>
 </body>
