--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -156,8 +156,8 @@
         <p class="logged-in-user">เข้าสู่ระบบโดย: {{ username }}</p>
 
         <div class="action-button-group">
-            <a href="{{ url_for('enter_customer_data') }}" class="action-button">กรอกข้อมูลลูกค้าใหม่</a>
-            <a href="{{ url_for('search_customer_data') }}" class="action-button">ค้นหาข้อมูลลูกค้า</a>
+            <a href="{{ url_for('enter_search_customer_data') }}" class="action-button">กรอกข้อมูลลูกค้าใหม่</a>
+            <a href="{{ url_for('search_search_customer_data') }}" class="action-button">ค้นหาข้อมูลลูกค้า</a>
             <a href="{{ url_for('loan_management') }}" class="action-button">จัดการเงินกู้</a>
             <a href="{{ url_for('logout') }}" class="action-button logout">ออกจากระบบ</a>
         </div>
